[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = ["Joscha Götzer <joscha.goetzer@teamviewer.com>"]

[tool.poetry.dependencies]
python = "^3.8"

pydantic = "^1.7.1"
[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
