[tool.poetry]
name = "bookmarks"
version = "1.0.0"
description = "A Python library for accessing the local Chrome Bookmarks store."
authors = ["JosXa <joscha.goetzer@gmail.com>"]
packages = [
    { include = "chrome_bookmarks" }
]
include = ["LICENSE"]
readme = "README.md"
repository = "https://github.com/JosXa/chrome-bookmarks"
keywords = ["chrome", "bookmarks", "pydantic", "python"]
classifiers = [
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "==3.*,>=3.7"
pydantic = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-runner = "*"
black = {version = "^20.8b1", allow-prereleases = true}
poethepoet = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
# Usage: `pip install poe`, then `poe [task]`
test = "poetry run pytest -m tests"